test/corpus/L1/negative/unterminated-string.st
"---
kind: negative
section: error.unterminated-string
codes: E_UNTERMINATED_STRING
---"
'abc
